[package]
name = "bridge_wasm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust core for tachybridge-wasm protocol operations"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "s"
